Fix layout overflow wip

--- a/components/Layout/LayoutWrapper/layout.module.scss
+++ b/components/Layout/LayoutWrapper/layout.module.scss
@@ -12,4 +12,5 @@
   flex-grow: 1;
   background-color: white;
   margin: 10px;
+  overflow: hidden;
 }
