--- a/pages/sportmapp/sportmapp.module.scss
+++ b/pages/sportmapp/sportmapp.module.scss
@@ -21,7 +21,7 @@
 .content {
   padding: 0 2.5rem 2.5rem 2.5rem;
   overflow: auto;
-  height: 85vh;
+  height: 82vh;
 
   h2 {
     font-size: 18px;
